[package]
name = "memes-sc"
version = "0.0.0"
authors = ["Rares"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.memes-voting]
path = "memes-voting"

[dependencies.memes-auction]
path = "memes-auction"

[dependencies.elrond-wasm]
version = "0.31.1"

[dev-dependencies.elrond-wasm-debug]
version = "0.31.1"
