[package]
name = "memes-auction-wasm"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ "."]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.memes-auction]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.34.0"

[dependencies.elrond-wasm-output]
version = "0.34.0"
features = [ "wasm-output-mode"]
