[package]
name = "memes-voting-wasm"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.memes-voting]
features = [ "wasm-output-mode",]
default-features = false
path = ".."

[dependencies.elrond-wasm-output]
version = "0.18.1"
features = [ "wasm-output-mode",]

[workspace]
members = [ ".",]
